src/sfdc/base/main/default/objects/B2C_CustomerList__c/B2C_CustomerList__c.object-meta.xml
<CustomObject>
    <description>... custom object used to represent B2C Commerce Customer Lists.</description>
    <label>B2C CustomerList</label>
    <nameField>
        <label>B2C CustomerList ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2C CustomerLists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>