src/sfdc/base/main/default/objects/B2C_CustomerList__c/fields/API_Url__c.field-meta.xml
<CustomField>
    <fullName>API_Url__c</fullName>
    <description>... represents the API Url used to retrieve the details for a given B2C Commerce CustomerList.</description>
    <inlineHelpText>... represents the API Url used to retrieve the details for a given B2C Commerce CustomerList.</inlineHelpText>
    <label>Record API Url</label>
    <type>Url</type>
</CustomField>