src/sfdc/base/main/default/objects/B2C_CustomerList__c/fields/Audit_OCAPI_API_Response__c.field-meta.xml
<CustomField>
    <fullName>Audit_OCAPI_API_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes whether the B2C Commerce OCAPI Interactions should be audited.</description>
    <inlineHelpText>... describes whether the B2C Commerce OCAPI Interactions should be audited.</inlineHelpText>
    <label>Audit B2C Commerce OCAPI Interactions</label>
    <type>Checkbox</type>
</CustomField>