src/sfdc/base/main/default/objects/B2C_CustomerList__c/fields/B2C_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>B2C_Client_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>... represents the B2C ClientID that serves as the default for a given B2C Instance, its CustomerLists, and Sites.</description>
    <inlineHelpText>... represents the B2C ClientID that serves as the default for a given B2C Instance, its CustomerLists, and Sites.</inlineHelpText>
    <label>B2C Client ID</label>
    <referenceTo>B2C_Client_ID__c</referenceTo>
    <relationshipLabel>B2C CustomerLists</relationshipLabel>
    <relationshipName>B2C_CustomerLists</relationshipName>
    <type>Lookup</type>
</CustomField>