src/sfdc/base/main/default/objects/B2C_CustomerList__c/fields/Base_API_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_API_Url__c</fullName>
    <description>... represents the base API Url derived from the CustomerList&apos;s Record API Url.</description>
    <formula>LEFT(API_Url__c, FIND( &apos;/s/&apos;, API_Url__c)-1)</formula>
    <inlineHelpText>... represents the base API Url derived from the CustomerList&apos;s Record API Url.</inlineHelpText>
    <label>Base API Url</label>
    <type>Text</type>
</CustomField>