src/sfdc/base/main/default/objects/B2C_CustomerList__c/fields/Default_Storefront__c.field-meta.xml
<CustomField>
    <fullName>Default_Storefront__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>... represents the default storefront to engage for a given B2C Commerce CustomerList.</description>
    <inlineHelpText>... represents the default storefront to engage for a given B2C Commerce CustomerList.</inlineHelpText>
    <label>Default Storefront</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>B2C_Site__c.Customer_List__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>B2C_Site__c</referenceTo>
    <relationshipLabel>B2C CustomerLists</relationshipLabel>
    <relationshipName>B2C_CustomerLists</relationshipName>
    <type>Lookup</type>
</CustomField>