src/sfdc/base/main/default/objects/B2C_CustomerList__c/fields/Enable_Address_Updates__c.field-meta.xml
<CustomField>
    <fullName>Enable_Address_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes whether B2C Commerce Address Book addresses can be updated for this CustomerList as Salesforce Platform custom objects.</description>
    <inlineHelpText>... describes whether B2C Commerce Address Book addresses can be updated for this CustomerList as Salesforce Platform custom objects.</inlineHelpText>
    <label>Enable Address Updates</label>
    <type>Checkbox</type>
</CustomField>