src/sfdc/base/main/default/objects/B2C_CustomerList__c/fields/Enable_Profile_Retrieval__c.field-meta.xml
<CustomField>
    <fullName>Enable_Profile_Retrieval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes if Customer Profiles can be retrieved from B2C Commerce.</description>
    <inlineHelpText>... describes if Customer Profiles can be retrieved from B2C Commerce.</inlineHelpText>
    <label>Enable Profile Retrieval</label>
    <type>Checkbox</type>
</CustomField>