src/sfdc/base/main/default/objects/B2C_CustomerList__c/fields/Enable_Profile_Updates__c.field-meta.xml
<CustomField>
    <fullName>Enable_Profile_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes if Account / Contact record updates can be initiated from B2C Commerce via REST APIs.</description>
    <inlineHelpText>... describes if Account / Contact record updates can be initiated from B2C Commerce via REST APIs.</inlineHelpText>
    <label>Enable Profile Updates</label>
    <type>Checkbox</type>
</CustomField>