src/sfdc/base/main/default/objects/B2C_CustomerList__c/fields/Is_B2C_Client_ID_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_B2C_Client_ID_Active__c</fullName>
    <description>... describes if the B2C Client ID associated to a B2C CustomerList is active.</description>
    <formula>B2C_Client_ID__r.Is_Active__c</formula>
    <inlineHelpText>... describes if the B2C Client ID associated to a B2C CustomerList is active.</inlineHelpText>
    <label>Is B2C Client ID Active</label>
    <type>Checkbox</type>
</CustomField>