src/sfdc/base/main/default/objects/B2C_CustomerList__c/fields/Named_Credential_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Developer_Name__c</fullName>
    <description>... represents the internal Salesforce Platform Developer Name for the Named Credential that should be used to interact with B2C Commerce OCAPI REST APIs for this customerList.</description>
    <inlineHelpText>... represents the internal Salesforce Platform Developer Name for the Named Credential that should be used to interact with B2C Commerce OCAPI REST APIs for this customerList.</inlineHelpText>
    <label>Named Credential Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>