src/sfdc/base/main/default/objects/B2C_CustomerList__c/fields/Total_Sites__c.field-meta.xml
<CustomField>
    <fullName>Total_Sites__c</fullName>
    <defaultValue>0</defaultValue>
    <description>... describes the total number of sites configured for this B2C Commerce CustomerList.</description>
    <inlineHelpText>... describes the total number of sites configured for this B2C Commerce CustomerList.</inlineHelpText>
    <label>Total Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>