src/sfdc/base/main/default/objects/B2C_CustomerList__c/validationRules/Ensure_API_Url_has_Prefix.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_API_Url_has_Prefix</fullName>
    <active>true</active>
    <description>... ensures that the API Url field has an https:// prefix.</description>
    <errorConditionFormula>NOT( LOWER(LEFT( API_Url__c , 8))  = &quot;https://&quot;)</errorConditionFormula>
    <errorDisplayField>API_Url__c</errorDisplayField>
    <errorMessage>Please ensure that the API Url field is prefixed with &apos;https://&apos;</errorMessage>
</ValidationRule>